--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
-Main.exe
-Btlshp.o
-temp.txt
+*.exe
+*.out
+*.app
+*.o
+*.obj
+*.dll
+*.so
+*.dylib
+
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+build/
+bin/
+obj/
+Debug/
+Release/
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+*.bsb
+*.log
